adjust height of pie chart to prevent overflow label

--- a/src/styles/charts.less
+++ b/src/styles/charts.less
@@ -1,21 +1,21 @@
 .map-chart,
-.graph-chart
- {
+.graph-chart {
 	width: 100%;
 	@media @bs-lg {
 		height: 700px;
 		padding: 1rem 1rem !important;
 	}
 }
-
 .gauge-chart,
 .pie-chart,
 .map-chart,
 .graph-chart {
 	padding: 1rem 0;
 }
-
-
+.pie-chart,
+.gauge-chart {
+	height: 250px;
+}
 .graph-chart,
 .map-chart {
 	@media @mobile-screen,
